--- a/sdbn.tex
+++ b/sdbn.tex
@@ -6,7 +6,9 @@
 \usepackage{listings}
 
 \usepackage{pslatex} % Use Postscript fonts
-
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+%\usepackage[]{algorithm2e}
 \usepackage{subcaption}
 \usepackage{color}
 \usepackage{multirow}
@@ -46,16 +48,16 @@
 	The probability of a data point, $ \mathbf{x} $,  is modelled by the function $f(\mathbf{x} \mid \mathbf{\theta} )$, given the model parameters $ \mathbf{\theta} $. 
 	Thus, given a set of data points $ \mathbf{X}=\{\mathbf{x}_1, \mathbf{x}_2, ..., \mathbf{x}_k, \mathbf{x}_{k+1}, ..., \mathbf{x}_K\} $, the probability of each data point,  $ \mathbf{x} $, is normalised by a partition function $Z( \mathbf{\theta})$ :
 	\begin{equation}
-	\label{equ:z_int}
 	p(\mathbf{x} \mid \mathbf{\theta} ) = \dfrac{f(\mathbf{x} \mid \mathbf{\theta} )}{Z( \mathbf{\theta})}
 	\end{equation}
 	where the partition function is defined as:
 	\begin{equation}
-	\label{equ:z_dis}
+	\label{equ:z_int}
 	Z( \mathbf{\theta}) = \int f(\mathbf{x} \mid \mathbf{\theta} )\D\mathbf{x}, \text{when  $ \mathbf{X} $ is continuous, or}
 	\end{equation}
 	
 	\begin{equation}
+	\label{equ:z_dis}
 	Z( \mathbf{\theta}) = \sum_{k=1}^K f(\mathbf{x}_k \mid \mathbf{\theta} ), \text{when  $ \mathbf{X} $ is discrete.}
 	\end{equation}
 	The purpose of learning is to tune the model parameter $ \mathbf{\theta} $ to fit the data $ \mathbf{X}  $. 
@@ -107,13 +109,14 @@
 	\log p(X \mid \mathbf{\theta} ) = \sum_{k=1}^K \log \sum_{i=1}^N \mathcal{N}(x_k \mid \mu_i, \sigma_i ) - \log N,
 	\end{equation}
 	where $\log Z( \mathbf{\theta})]$ still equals a constant, $ N $, but the partial differential equation of any parameter depends on other model parameters.
-	It is very hard to solve log of sum equations, thus iteration methods are introduced, e.g., gradient descent method. %and expectation maximization (EM) algorithm
+	It is very hard to solve equation set of log of sum, thus iteration methods are introduced, e.g., gradient descent method. %and expectation maximization (EM) algorithm
 	Searching for a local minimum of the energy function in the parameter space, it starts with an initial point, either random or well selected.
 	For each iteration, the partial derivatives for every dimension of the parameter point are calculated as the gradient.
-	The gradient determines the decent direction of the space searching, the next parameter point is one step $ \eta $  towards the direction or is the lowest point found by line search.
+	The gradient determines the decent direction of the space search, the next parameter point is one step $ \eta $  towards the direction or is the lowest point found by line search.
 	
 	The gradient descent method is equivalent to ``being in the field at night with a torch.''~\cite{woodfordnotes}.
 	And then the descent direction is estimated and chosen by using the torch to see the relative heights of the field a short distance in each direction.
+	Because partial differential equation of any parameter depends on other model parameters, we can only see the gradient for a small area.
 	The search will follow the direction by walking one step or a certain distance (e.g. line search lowest point), and then start a new iteration.
 	
 
@@ -124,12 +127,67 @@
 	\end{equation}
 	where the partition (normalisation) function $Z( \mathbf{\theta})$ is no longer a constant, but varies accordance to all the parameters.
 	Essentially, the integration of the probability model, see Equation~\ref{equ:z_int} and~\ref{equ:z_dis}, is usually algebraically intractable.
-	We have to use numerical integration method to evaluate the Equation~\ref{equ:energy} by sampling from the probability model.
+	We have to use numerical integration method to evaluate the Equation~\ref{equ:energy} by Monte Carlo Markov Chain (MCMC) sampling, see section~\ref{sec:mcmc}.
 	Although in this example the integration of product of normal distribution is still tractable, it is also helpful to use numerical integration.
 	
-	The motivation behind using Contrastive Divergence algorithm is to boost the training speed of a Markov Chain in order to represent the distribution of a PoE (Product of Expert) model.
-	Thus the sampling can be followed using this trained Markov Chain. 
+	%The motivation underlining Contrastive Divergence algorithm is to boost the training speed of a Markov Chain in order to represent the distribution of a PoE (Product of Expert) model.
+	%Thus the sampling can be followed using this trained Markov Chain model. 
 \subsection{MCMC Sampling}
+	\label{sec:mcmc}
+	In order to solve the integration of algebraically intractable equations we can use numerical integration to approximate.
+	One of the popular method is Monte Carlo integration:
+	\begin{equation}
+	\int_{a}^{b} f(x) \D x = \int_{a}^{b}\frac{f(x)}{q(x)}q(x)\D x = \dfrac{1}{N}\sum_{i=1}^{N}\frac{f(x_i)}{q(x_i)}.
+	\end{equation}
+	The integration of $ f(x) $ transforms to the integration of a new function $ F(x) = f(x)/q(x)  $ times its probability function $ q(x) $.
+	It could be approximated by sampling N data points $ x_i $ according to the probability distribution $ q(x) $, and calculate the average of $ F(x_i) $ as $ <F(x)>_{q(x)}$.
+	So the main question following is how to sample from a probability distribution.
+	
+	MCMC algorithm was proposed by Metropolis in 1953 and it became a wide-used sampling method.
+	The stationary distribution $ \pi $ exists when every two nodes in a Markov Chain are connected regardless of the initial state distribution $ \pi_0 $:
+	\begin{equation}
+	\begin{aligned}
+		&\pi(j) = \sum_{i=1}^{\infty}\pi(i)P_{ij} \\
+		&\pi P = \pi,
+	\end{aligned}
+	\end{equation}
+	where $ P $ is the transition probability matrix, and $ \pi $ is in the state space of a MC and the sum, $ \sum_{i=1}^{\infty}\pi(i) $,of a state distribution is 1.
+	Thus based on the useful theorem of MC, sampled sequence $ \{x_0, x_1, ..., x_n, ... \}$ from a MC complies with its stationary distribution $ \pi(x) $.
+	Metropolis stated that if a MC has a stationary distribution, $ q(x) $, which is exactly needed to sample from, then we can easily obtain a sample sequence along the MC according to the transformation probability matrix $ P $.
+	The problem here is to build $ P $ to make the stationary distribution equal to the required probability, $ \pi(x) = q(x) $.
+	
+	So the other useful theorem (detailed balance) lies here, if an aperiodic MC is reversible: $\pi (i) P_{ij} = \pi (j) P_{ji},$ then $ \pi $ is the stationary distribution.
+	It is a stronger condition than the previous theorem, so most of the MCs are not generally eligible:
+	\begin{equation}
+	\pi (i) P_{ij} \neq \pi (j) P_{ji}.
+	\end{equation}
+	Thus we can introduce another parameter matrix, $ \alpha $ to make a general MC reversible:
+	\begin{equation}
+	\pi (i) P_{ij} \alpha_{ij} = \pi (j) P_{ji} \alpha_{ji}	,
+	\end{equation}
+	where $ \alpha_{ij} = \pi(j) P_{ji} $ and $ \alpha_{ji} = \pi(i) P_{ij}$.
+	The altered transformation probability matrix is $ P'_{ij} =  P_{ij} \alpha_{ij}$ and $ P'_{ji} =  P_{ji} \alpha_{ji}$, and the MC complies the detailed balance condition: $\pi (i) P'_{ij} = \pi (j) P'_{ji}$.
+	The matrix parameter $ \alpha $ is called as ``acceptance rate'', and its physic meaning is as follows: when state $ i $ transforms to state $ j $ with a probability of $ P_{ij} $, the transformation is accepted by the rate of $ \alpha_{ij} $.
+	\begin{algorithm}[h]
+	  \caption{MCMC Sampling}
+	  \label{alg:mcmc}
+	  \begin{algorithmic}
+	    \Procedure{Correction}{coeffs $C$, correlations $Q$}
+	    \State $N \leftarrow \emptyset$ \Comment{Corrected coefficients}
+	    \Repeat
+	    \State $m \leftarrow max(C)$\Comment{Obtain maximum from $C$}
+	    \State $M \leftarrow M \cup m$\Comment{Add maximum to $M$}
+	    \State $C \leftarrow C \setminus m$\Comment{Remove maximum from $C$}
+	    \ForAll{$ c \in C$} \Comment{Adjust all remaining $c$}
+	    \If{$Q(m, c) \neq 0$} \Comment{Adjust only near}
+	    \State $c \leftarrow c - m \times Q(m, c)$
+	    \EndIf
+	    \EndFor
+	    \Until{$C = \emptyset$}
+	    \State \textbf{return} $M$
+	    \EndProcedure
+	  \end{algorithmic}
+	\end{algorithm}
 \subsection{CD Instead of KL}
 \section{RBM\cite{zhang2013rbm}}
 \subsection{Objective Function}
