--- a/sdbn.tex
+++ b/sdbn.tex
@@ -154,6 +154,7 @@
 	where $ P $ is the transition probability matrix, and $ \pi $ is in the state space of a MC and the sum, $ \sum_{i=1}^{\infty}\pi(i) $,of a state distribution is 1.
 	Thus based on the useful theorem of MC, sampled sequence $ \{x_0, x_1, ..., x_n, ... \}$ from a MC complies with its stationary distribution $ \pi(x) $.
 	Metropolis stated that if a MC has a stationary distribution, $ q(x) $, which is exactly needed to sample from, then we can easily obtain a sample sequence along the MC according to the transformation probability matrix $ P $.
+	Here so far we are describing the MC with discrete states, however the it also applies to continuous $ \pi $ and $ P $.
 	The problem here is to build $ P $ to make the stationary distribution equal to the required probability, $ \pi(x) = q(x) $.
 	
 	So the other useful theorem (detailed balance) lies here, if an aperiodic MC is reversible: $\pi (i) P_{ij} = \pi (j) P_{ji},$ then $ \pi $ is the stationary distribution.
@@ -168,26 +169,31 @@
 	where $ \alpha_{ij} = \pi(j) P_{ji} $ and $ \alpha_{ji} = \pi(i) P_{ij}$.
 	The altered transformation probability matrix is $ P'_{ij} =  P_{ij} \alpha_{ij}$ and $ P'_{ji} =  P_{ji} \alpha_{ji}$, and the MC complies the detailed balance condition: $\pi (i) P'_{ij} = \pi (j) P'_{ji}$.
 	The matrix parameter $ \alpha $ is called as ``acceptance rate'', and its physic meaning is as follows: when state $ i $ transforms to state $ j $ with a probability of $ P_{ij} $, the transformation is accepted by the rate of $ \alpha_{ij} $.
+	Since the accept rate may be too low for the sampling to move along the MC, we can normalise the $ \alpha $ pair to 1:
+	\begin{equation}
+		\alpha^{'}(i,j) = min \left\{\frac{\pi(j)P_{ji}}{\pi(i)P_{ij}},1\right\}.
+	\end{equation}
+	The algorithm is called Metropolis-Hastings and described in following:
 	\begin{algorithm}[h]
-	  \caption{MCMC Sampling}
+	  \caption{Metropolis-Hastings Sampling}
 	  \label{alg:mcmc}
 	  \begin{algorithmic}
-	    \Procedure{Correction}{coeffs $C$, correlations $Q$}
-	    \State $N \leftarrow \emptyset$ \Comment{Corrected coefficients}
-	    \Repeat
-	    \State $m \leftarrow max(C)$\Comment{Obtain maximum from $C$}
-	    \State $M \leftarrow M \cup m$\Comment{Add maximum to $M$}
-	    \State $C \leftarrow C \setminus m$\Comment{Remove maximum from $C$}
-	    \ForAll{$ c \in C$} \Comment{Adjust all remaining $c$}
-	    \If{$Q(m, c) \neq 0$} \Comment{Adjust only near}
-	    \State $c \leftarrow c - m \times Q(m, c)$
-	    \EndIf
-	    \EndFor
-	    \Until{$C = \emptyset$}
-	    \State \textbf{return} $M$
-	    \EndProcedure
+	  	
+%	    \Procedure{Correction}{coeffs $C$, correlations $Q$}
+	    \State Initialization $x_0 = s_{random}$, ($ x_t $:sampling sequence and $s_{k}$:state in MC )
+	    \For{$t=0, 1, 2, ..., N$}
+		    \State $y \sim P_{x_{t-1}}$ 
+			    \Comment{Random drawing the next state by the transformation probability $P_{x_{t-1}}$}
+		    \State $ u \sim Uniform[0,1] $ 
+			    \Comment{Random drawing from a uniform distribution}
+			\If {$ u < \alpha^{'}(i,j) = min \left\{\frac{q(j)P_{ji}}{q(i)P_{ij}},1\right\} $}
+				\State {$x_t = y$} \Comment{Accept the transformation when the random number is less than $\alpha$}
+				\Else \State {$x_t = x_{t-1}$}  \Comment{Transformation is refused elsewise}
+			\EndIf
+		\EndFor
 	  \end{algorithmic}
 	\end{algorithm}
+\subsection{Gibbs Sampling}
 \subsection{CD Instead of KL}
 \section{RBM\cite{zhang2013rbm}}
 \subsection{Objective Function}
