--- a/sdbn.tex
+++ b/sdbn.tex
@@ -127,7 +127,11 @@
 	\end{equation}
 	where the partition (normalisation) function $Z( \mathbf{\theta})$ is no longer a constant, but varies accordance to all the parameters.
 	Essentially, the integration of the probability model, see Equation~\ref{equ:z_int} and~\ref{equ:z_dis}, is usually algebraically intractable.
-	We have to use numerical integration method to evaluate the Equation~\ref{equ:energy} by Monte Carlo Markov Chain (MCMC) sampling, see section~\ref{sec:mcmc}.
+	We have to use numerical integration method to evaluate the Equation~\ref{equ:energy}:
+	\begin{equation}
+	
+	\end{equation}
+	by Monte Carlo Markov Chain (MCMC) sampling, see section~\ref{sec:mcmc}.
 	Although in this example the integration of product of normal distribution is still tractable, it is also helpful to use numerical integration.
 	
 	%The motivation underlining Contrastive Divergence algorithm is to boost the training speed of a Markov Chain in order to represent the distribution of a PoE (Product of Expert) model.
@@ -222,14 +226,6 @@
 	    	\For{$k=1, 2, ..., M$}
 	    		\State $ x_t(k) = p(x(k)|x_{t-1}(1),x_{t-1}(2),...,x_{t-1}(k-1),x_{t-1}(k+1),...,x_{t-1}(M))$\\
 	    		\Comment{Sampling by the conditional distribution}
-%		    \State $y \sim p_(x|x_{t-1})$ 
-%			    \Comment{Random drawing the next state by the transformation probability matrix $P$}
-%		    \State $ u \sim Uniform[0,1] $ 
-%			    \Comment{Random drawing from a uniform distribution}
-%			\If {$ u < \alpha^{'}(x_{t-1},y) = min \left\{\frac{q(y)p_(x_{t-1}|y)}{q(x_{t-1})p_(y|x_{t-1})},1\right\} $}
-%				\State {$x_t = y$} \Comment{Accept the transformation when the random number is less than $\alpha$}
-%				\Else \State {$x_t = x_{t-1}$}  \Comment{Transformation is refused elsewise}
-%			\EndIf
 			\EndFor
 		\EndFor
 	  \end{algorithmic}
