--- a/sdbn.tex
+++ b/sdbn.tex
@@ -127,11 +127,7 @@
 	\end{equation}
 	where the partition (normalisation) function $Z( \mathbf{\theta})$ is no longer a constant, but varies accordance to all the parameters.
 	Essentially, the integration of the probability model, see Equation~\ref{equ:z_int} and~\ref{equ:z_dis}, is usually algebraically intractable.
-	We have to use numerical integration method to evaluate the Equation~\ref{equ:energy}:
-	\begin{equation}
-	
-	\end{equation}
-	by Monte Carlo Markov Chain (MCMC) sampling, see section~\ref{sec:mcmc}.
+	We have to use numerical integration method to evaluate the Equation~\ref{equ:energy} by Monte Carlo Markov Chain (MCMC) sampling, see section~\ref{sec:mcmc}.
 	Although in this example the integration of product of normal distribution is still tractable, it is also helpful to use numerical integration.
 	
 	%The motivation underlining Contrastive Divergence algorithm is to boost the training speed of a Markov Chain in order to represent the distribution of a PoE (Product of Expert) model.
